// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context initially fetches requests 1`] = `
Array [
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      Line 1
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="Place de le République Française, 10"
    />
  </div>,
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      Line 2
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="boite 15"
    />
  </div>,
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      Postal code
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="4000"
    />
  </div>,
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      City
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="Liège"
    />
  </div>,
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      Country
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="Belgium"
    />
  </div>,
]
`;

exports[`renders 1`] = `
Array [
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      First name
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="John"
    />
  </div>,
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      Last name
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="Doe"
    />
  </div>,
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      E-mail
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="john.doe@logion.network"
    />
  </div>,
  <div
    className="form-group"
  >
    <label
      className="form-label"
    >
      Phone number
    </label>
    <input
      className="form-control"
      readOnly={true}
      type="text"
      value="+1234"
    />
  </div>,
]
`;
